added score on win/lose; moved score to global scope; allowed turn at lives=0

--- a/css/master.css
+++ b/css/master.css
@@ -8,6 +8,11 @@
     display: none;
 }
 
+.scoreSpan {
+    color: black;
+    font: 30px sans-serif;
+}
+
 body {
     display: flex;
     flex-direction: column;
