--- a/css/game.css
+++ b/css/game.css
@@ -68,3 +68,10 @@ div.hidden {
 #startButton:hover {
     color: red;
 }
+
+#startDiv {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 100px;
+    font-weight: bold;
+    color: white;
+}
